--- a/Ejercicio4.HTML
+++ b/Ejercicio4.HTML
@@ -5,25 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<!--DOM-->
+
 <body style="background-color: aquamarine;">
-    <header style="background-color: rgb(172, 166, 166);">
-        <h1>ENCABEZADO NIVEL 1</h1>
+    <header style="background-color: rgb(0, 0, 0);">
+        <h1 style="color: azure;">ENCABEZADO NIVEL 1</h1>
             <nav style="background-color: antiquewhite;">
-                <span>ENLACE 1</span>
-                <span>ENLACE 2</span>
-                <span>ENLACE 3</span>
-                <span>ENLACE 4</span>
+                <span style="background-color: blueviolet;">ENLACE 1</span>
+                <span style="background-color: blueviolet;">ENLACE 2</span>
+                <span style="background-color: blueviolet;">ENLACE 3</span>
+                <span style="background-color: blueviolet;">ENLACE 4</span>
             </nav>
     </header>
-<main>
-    <article style="background-color: rgb(20, 160, 236);">
-        <h2>ENCABEZADO NIVEL 2</h2>
-        <p>Aquí va texto del primer parrafo</p>
-        <p>Aquí va texto del segundo parrafo</p>
-    </article>
-    <aside style="background-color: rgb(235, 54, 211);">
-        <h3>APARTADO</h3>
+
+    <main style="background-color: aliceblue;">
+        <article style="background-color: rgb(20, 160, 236);">
+            <h2>ENCABEZADO NIVEL 2</h2>
+                <p>Aquí va texto del primer parrafo</p>
+                <p>Aquí va texto del segundo parrafo</p>
+        </article>
+    
+        <aside style="background-color: rgb(235, 54, 211);">
+            <h3>APARTADO</h3>
+                <p>Elige una opción</p>
+                    <div>
+                        <input type="checkbox" id="01">
+                        <Label for="01">Opción 1</Label>
+                    </div>
+                        
+                    <div>
+                        <input type="checkbox" id="02">
+                        <Label for="02">Opción 2</Label>
+                    </div>
+
+                    <div>
+                        <input type="checkbox" id="03">
+                        <Label for="03">Opción 3</Label>
+                    </div>
+
+                    <div>
+                        <input type="checkbox" id="04">
+                        <Label for="04">Opción 4</Label>
+                    </div>
+                <div>
+                    <input type="submit" value="Enviar">
+                </div>
+        </aside>
+
+    <aside style="background-color: rgb(251, 222, 7);">
+        <h4>Sección de información de contacto, derechos de autor, etc.</h4>
     </aside>
-</main>
+    </main>
 </body>
 </html>
